# Eye_Diagrams

./: .load_modules.ipynb.layout  Eye Diagrams Overview.pptx  EyeDiagrams.ipynb  README.md  SampledSignal.ipynb  Temp.ipynb  Untitled.ipynb  Untitled1.ipynb  bandwidth_jitter_chart.ipynb  err_dist_chart.ipynb  eye_diagram_chart.ipynb  load_modules.ipynb  load_modules.py  makefigs.py  pyproject.toml  requirements.txt  requirements_bak.txt  temp.py  test.ipynb  ~$Eye Diagrams Overview.pptx
.ipynb_checkpoints/: EyeDiagrams-checkpoint.ipynb  bandwidth_jitter_chart-checkpoint.ipynb  bandwidth_jitter_chart_2-checkpoint.ipynb  err_dist_chart-checkpoint.ipynb  eye_diagram_chart-checkpoint.ipynb  load_modules-checkpoint.ipynb  modules-checkpoint.py
Info/: Eye Diagrams Overview.docx  ~$e Diagrams Overview.docx  ~WRL0005.tmp
