[project]
name = "eye-diagrams"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bokeh>=3.8.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.5.5",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "panel>=1.8.7",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]
